Update navigation and improve display names in admin pages
- Refactored `Create.cshtml.cs` to display `Name` for `ArchiveBoxID` and `FirstName` for `PolicemanID` in the `SelectList`.
- Added new navigation links for `EvidenceAdmin`, `ArchiveBoxAdmin`, and `PolicemanAdmin` in `_Layout.cshtml`.
- Removed `ConnectionStrings` section from `appsettings.json`insted using user secrets

--- a/PoliceArchive/Pages/Shared/_Layout.cshtml
+++ b/PoliceArchive/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Admin/EvidenceAdmin/index">EvidenceAdmin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Admin/ArchiveBoxAdmin/index">ArchiveBoxAdmin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Admin/PolicemanAdmin/index">PolicemanAdmin</a>
+                        </li>
                     </ul>
                 </div>
             </div>
